        - changed: most of the EWF support (Ecasound Wave Files, .ewf) 
		   has been rewritten in this version; numerous bugs
	  	   are fixed
        - added: audio looper object; "-i:audioloop,foo.wav" will play
		 'foo.wav' and loop it indefinitely
        - added: audio selector object; "-i:audioselect,5,15.2,foo.wav" will 
		 play 15.2sec of "foo.wav", starting at position 5sec.
	- added: EWF files; ability to specify positions in time in 
		 sample frames; "2.0" is interpreted as 2.0secs while
	         "88200sa" is interpreted as 88200 samples
        - changed: eaim - commands 'cop-add' and 'ctrl-add' now allow
		   an alternate syntax: both "-<id_string>:par1,...,parN"
		   and "<id_string>:par1,...,parN" are now accepted
        - changed: ability to write to EWF file is now marked as 
	           a deprecated feature which will be removed in
	           a later release 
	- changed: mechanism to terminate forked child processes; 
		   properly wait for process termination in all 
		   circumstances (previously there were some 
		   unhandled corner cases)
	- changed: major updates to the examples.html page (available
	           also at http://eca.cx/examples )
        - changed: updated ecasound(1) man page description of '-klg'
        - fixed: incorrect usage of the Python C API, which leads to
	 	 segfaults when pyecasound is used under python2.5;
		 fixes Debian bug #468965
        - fixed: bugs in ewf-looping code
	- fixed: avoid terminating processing when invalid parameters are 
		 passed to channel copy (chcopy/erc), mix (chmix/erm) and 
	         move (chmove) chainops
	- fixed: eaim - buffering mode was sometimes incorrectly 
		 reported in 'cs-status' output (-B:auto instead of 
		 the actual set buffering mode) output; bug reported by 
		 Jan Weil
        - fixed: compilation warnings from GCC-4.3; fixes Debian bug
	         #454890, patch from Cyril Brulebois
	- fixed: bug in passing multiple arguments to 'typeselect', 