@@ -5,7 +5,7 @@
 <body>
 <hr>
 <h1>ecasound</h1>
-<h2>21.03.2008</h2>
+<h2>02.07.2008</h2>
 
 <html><head>
 <link rev="made" href="mailto:kvehmanen -at- eca -dot- cx">
@@ -22,7 +22,7 @@
 <hr>
 <h1>ecasound(1)</h1>
 <h2> Multimedia software</h2>
-<h2>21.03.2008</h2>
+<h2>02.07.2008</h2>
 
 
 <p>
@@ -328,6 +328,13 @@ the <strong>-i:audioselect,start-time,duration,file.ext,params</strong> can
 be used. This will play "duration" of "file.ext", starting at 
 "start-time". The time values should be given as seconds (e.g.
 "2.25", or as samples (e.g. "25000sa"). Parameters 4...N are 
+passed as is to the child object.
+<p>
+To play an audio object at a given moment in time, 
+the <strong>-i:audioplayat,play-at-time,file.ext,params</strong> can be
+used. This will play "file.ext" after position reaches 
+"play-at-time". The time values should be given as seconds (e.g.
+"2.25", or as samples (e.g. "25000sa"). Parameters 2...N are 
 passed as is to the child object.
 <p>
 <p><dt><strong>Ecasound Wave Files (EWF) - .ewf</strong><dd>
