@@ -2,7 +2,7 @@ mailto(kvehmanen -at- eca -dot- cx)
 
 manpage(ecasound)
        (1)
-       (21.03.2008)
+       (02.07.2008)
        ()
        (Multimedia software)
 
@@ -309,6 +309,13 @@ the bf(-i:audioselect,start-time,duration,file.ext,params) can
 be used. This will play "duration" of "file.ext", starting at 
 "start-time". The time values should be given as seconds (e.g.
 "2.25", or as samples (e.g. "25000sa"). Parameters 4...N are 
+passed as is to the child object.
+
+To play an audio object at a given moment in time, 
+the bf(-i:audioplayat,play-at-time,file.ext,params) can be
+used. This will play "file.ext" after position reaches 
+"play-at-time". The time values should be given as seconds (e.g.
+"2.25", or as samples (e.g. "25000sa"). Parameters 2...N are 
 passed as is to the child object.
 
 dit(Ecasound Wave Files (EWF) - .ewf)
